# suicide-crisis-detection

./: .dockerignore  .gitignore  README.md  face-expression.ipynb  pose-recognition.ipynb  pyproject.toml  run_model.py
models/: load_models.py
module/: models.py  utils.py
