[project]
name = "robot-pencegah-bunuh-diri"
version = "0.1.0"
description = "Robot Pencegah Bunuh Diri - Sistem deteksi ekspresi wajah untuk identifikasi krisis bunuh diri"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "opencv-python==4.10.0.84",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "scikit-learn==1.6.1",
    "gdown==5.2.0",
    "seaborn==0.13.2",
    "ipykernel==6.30.1",
    "pandas==2.3.2",
    "mediapipe>=0.10.21",
    "opencv-contrib-python>=4.11.0.86",
]
